Fix some icons being off center

--- a/web/assets/pages/dashboard.css
+++ b/web/assets/pages/dashboard.css
@@ -4,7 +4,6 @@ body {
 
 .feather {
   width: 16px;
-  height: 16px;
 }
 
 /*
